# irc.rs

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  tailwind.config.js
src/: index.html  irc.pest  irc.rs  lib.rs  main.rs  ui.rs
src/irc/: client.rs  parser.rs
src/irc/client/: buffer.rs  cap_negotiator.rs  capabilities.rs  test.rs
src/irc/client/cap_negotiator/: test.rs
src/irc/client/capabilities/: test.rs
src/irc/parser/: capability.pest  capability.rs  generic_message.rs  grammar.rs  message.rs  msg_cap.rs  test.rs
src/irc/parser/generic_message/: test.rs
src/irc/parser/grammar/: test.rs
src/irc/parser/msg_cap/: test.rs
src/ui/: app.rs
src/ui/app/: home.rs  route.rs  settings.rs
src/ui/app/home/: buffer_view.rs  channel_list.rs  user_list.rs
