[package]
name = "irc"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo = "0.11.0"
pest = "2.7.15"
pest_derive = "2.7.15"
serde = { version = "1.0.216", features = ["derive"] }
web-sys = { version = "0.3.76", features = ["WebSocket"] }
yew = { version = "0.21.0", features = ["csr", "hydration", "ssr"] }
yew-hooks = "0.3.3"
yew-router = "0.18.0"

[dev-dependencies]
websocket = "0.27.1"
